examples/test/testpolicy2498.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2498
  namespace: namespace487
spec:
  podSelector:
    matchLabels:
      key15: value32
      key8: value39
      key30: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value31
          key27: value16
          key26: value4
      podSelector:
        matchLabels:
          key45: value41
          key47: value48
          key28: value26
